--- a/editarCarrera.html
+++ b/editarCarrera.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- My Css-->
+    <link rel="stylesheet" href="/css/editarDocente.css">
     <link rel="stylesheet" href="/css/globales.css">
 
     <title>Academias</title>
@@ -28,48 +29,33 @@
 
     <div class="container">
 
-        <p class="display-4 text-white font-weight-bold">Bienvenido administrador</p>
-
-        <div class="mt-3"></div>
-
-        <div class="d-flex justify-content-center">
-            <input id="miInfo" type="button" class="btn btn-danger btn-lg" value="Editar mis datos">
-        </div>
-
-        <div class="mt-5"></div>
+        <p class="display-4 text-white font-weight-bold">Seleccione una carrera</p>
 
         <div class="row">
-            <div id="crearDocente" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-info text-center text-white clickme">
-                <h4>Crear docente</h4>
+            <div class="col-sm-12 col-md-2 col-lg-1 d-flex align-items-center ">
+                <label for="cantidad" class="text-white">Mostrar:</label>
             </div>
-            <div class="col-md-2"></div>
-            <div id="editarDocente" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-info text-center text-white mt-sm-5 mt-md-0 clickme">
-                <h4>Editar docente</h4>
+            <div class="col-sm-12 col-md-2 col-lg-1">
+                <select id="mostrar" class="form-control"></select>
             </div>
         </div>
-
-        <div class="mt-5"></div>
 
         <div class="row">
-            <div class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-success text-center text-white clickme">
-                <h4>Crear academia</h4>
+            <div class="col-sm-12 col-md-12 col-lg-5">
+                <div class="form-group">
+                    <label class="text-white" for="nombre">Buscar por nombre:</label>
+                    <input type="text" id="nombre" name="nombre" class="form-control">
+                </div>
             </div>
-            <div class="col-md-2"></div>
-            <div id="editarAcademia" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-success text-center text-white mt-sm-5 mt-md-0 clickme">
-                <h4>Editar academia</h4>
+            <div class="col-sm-12 col-md-12 col-lg-2 d-flex align-items-center mb-sm-2 mb-xl-0">
+                <input id="cantidad" class="btn btn-primary mx-auto my-auto" type="button" value="Aplicar">
             </div>
         </div>
 
-        <div class="mt-5"></div>
-
-        <div class="row mb-5">
-            <div class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-primary text-center text-white clickme">
-                <h4>Crear carrera</h4>
-            </div>
-            <div class="col-md-2"></div>
-            <div id="editarCarrera" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-primary text-center text-white mt-sm-5 mt-md-0 clickme">
-                <h4>Editar carrera</h4>
-            </div>
+        <div id="datos" class="container row mt-3">
+        </div>
+        <div class="mt-3 mb-0">
+            <nav aria-label="Page-Nav" id="paginas"></nav>
         </div>
 
     </div>
@@ -80,7 +66,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- My Script -->
-    <script src="js/administrador.js"></script>
+    <script src="js/paginacion.js"></script>
+    <script src="js/editarCarrera.js"></script>
 </body>
 
 </html>
