--- a/editarDocente.html
+++ b/editarDocente.html
@@ -9,8 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!--My css-->
+    <!-- My Css-->
     <link rel="stylesheet" href="/css/editarDocente.css">
+    <link rel="stylesheet" href="/css/globales.css">
 
     <title>Academias</title>
 </head>
@@ -31,6 +32,15 @@
         <p class="display-4 text-white font-weight-bold">Seleccione un docente</p>
 
         <div class="row">
+            <div class="col-sm-12 col-md-2 col-lg-1 d-flex align-items-center ">
+                <label for="cantidad" class="text-white">Mostrar:</label>
+            </div>
+            <div class="col-sm-12 col-md-2 col-lg-1">
+                <select id="mostrar" class="form-control"></select>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-5">
                 <div class="form-group">
                     <label class="text-white" for="nomina">Buscar por nomina:</label>
@@ -44,11 +54,11 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-2 d-flex align-items-center mb-sm-2 mb-xl-0">
-                <input class="btn btn-primary mx-auto my-auto" type="button" value="Buscar">
+                <input id="cantidad" class="btn btn-primary mx-auto my-auto" type="button" value="Aplicar">
             </div>
         </div>
 
-        <div id="datos" class="container row">
+        <div id="datos" class="container row mt-3">
         </div>
         <div class="mt-3 mb-0">
             <nav aria-label="Page-Nav" id="paginas"></nav>
@@ -62,6 +72,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- My Script -->
+    <script src="js/paginacion.js"></script>
     <script src="js/editarDocente.js"></script>
 </body>
 
