--- a/crearCarrera.html
+++ b/crearCarrera.html
@@ -30,14 +30,17 @@
         <form action="#" method="post" id="registroCarrera">
 
             <div class="row">
-                <div class="col-md-6 col-xl-2 d-flex align-items-center">
+                <div class="col-md-4 col-xl-2 d-flex align-items-center">
                     <img src="img/perfil.png" alt="foto de perfil" class="fotoPerfil rounded-circle img-fluid mx-auto" id="imgPerfil">
                 </div>
-                <div class="col-md-6 col-xl-4 d-flex align-items-center">
+                <div class="col-md-4 col-xl-4 d-flex align-items-center">
                     <div class="custom-file">
                         <input type="file" class="custom-file-input" id="fotoPerfil" name="fotoPerfil" value="Buscar">
                         <label class="custom-file-label" for="fotoPerfil" id="nombreImg">Elija una imagen</label>
                     </div>
+                </div>
+                <div class="col-md-4 col-xl-4 d-flex align-items-center">
+                    <input type="submit" value="Guardar" class="btn btn-primary">
                 </div>
             </div>
 
