--- a/crearCarrera.html
+++ b/crearCarrera.html
@@ -62,7 +62,7 @@
 
             <div class="col-12 mt-3">
                 <div class="row">
-                    <div class="col-md-12 col-xl-6 form-inline d-form align-content-start">
+                    <div class="col-md-12 col-xl-6 form-inline d-flex align-content-start">
                         <label class="mr-2 text-white registroLabelCarrera" for="NominaJefe">Jefe de carrera:</label>
                         <div>
                             <input type="text" name="NominaJefe" id="NominaJefe" class="form-control" placeholder="Nomina">
@@ -76,7 +76,7 @@
 
             <div class="col-12 mt-3">
                 <div class="row">
-                    <div class="col-md-12 col-xl-6 form-inline d-form align-content-start">
+                    <div class="col-md-12 col-xl-6 form-inline d-flex align-content-start">
                         <label class="mr-2 text-white registroLabelCarrera" for="NominaMiembro">Agregar miembro:</label>
                         <div>
                             <input type="text" name="NominaMiembro" id="NominaMiembro" class="form-control" placeholder="Nomina">
