--- a/crearAcademia.html
+++ b/crearAcademia.html
@@ -70,12 +70,12 @@
                         <div class="card-body d-flex flex-column align-items-center">
                             <img src="img/perfil.png" alt="foto de perfil no encontrada" class="fotoPerfil rounded-circle img-fluid mt-1">
                             <div class="form-inline mt-2">
-                                <label class="registroLabel" for="NombreMiembro">Nombre</label>
-                                <input type="text" name="NombreMiembro" id="NombreMiembro" class="form-control ml-2" disabled>
+                                <label class="registroLabel" for="NombrePresidente">Nombre</label>
+                                <input type="text" name="NombrePresidente" id="NombrePresidente" class="form-control ml-2" disabled>
                             </div>
                             <div class="form-inline mt-2">
-                                <label class="registroLabel" for="CarreraMiembro">Carrera</label>
-                                <input type="text" name="CarreraMiembro" id="CarreraMiembro" class="form-control ml-2" disabled>
+                                <label class="registroLabel" for="CarreraPresidente">Carrera</label>
+                                <input type="text" name="CarreraPresidente" id="CarreraPresidente" class="form-control ml-2" disabled>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -98,12 +98,12 @@
                         <div class="card-body d-flex flex-column align-items-center">
                             <img src="img/perfil.png" alt="foto de perfil no encontrada" class="fotoPerfil rounded-circle img-fluid mt-1">
                             <div class="form-inline mt-2">
-                                <label class="registroLabel" for="NombreMiembro">Nombre</label>
-                                <input type="text" name="NombreMiembro" id="NombreMiembro" class="form-control ml-2" disabled>
+                                <label class="registroLabel" for="NombreSecretario">Nombre</label>
+                                <input type="text" name="NombreSecretario" id="NombreSecretario" class="form-control ml-2" disabled>
                             </div>
                             <div class="form-inline mt-2">
-                                <label class="registroLabel" for="CarreraMiembro">Carrera</label>
-                                <input type="text" name="CarreraMiembro" id="CarreraMiembro" class="form-control ml-2" disabled>
+                                <label class="registroLabel" for="CarreraSecretario">Carrera</label>
+                                <input type="text" name="CarreraSecretario" id="CarreraSecretario" class="form-control ml-2" disabled>
                             </div>
                         </div>
                         <div class="card-footer">
