--- a/crearCarrera.html
+++ b/crearCarrera.html
@@ -60,31 +60,63 @@
                 </div>
             </div>
 
-            <div class="col-12 mt-3">
-                <div class="row">
-                    <div class="col-md-12 col-xl-6 form-inline d-flex align-content-start">
-                        <label class="mr-2 text-white registroLabelCarrera" for="NominaJefe">Jefe de carrera:</label>
-                        <div>
-                            <input type="text" name="NominaJefe" id="NominaJefe" class="form-control" placeholder="Nomina">
-                            <div id="validation-nommbre" class="invalid-tooltip">Ingrese este campo</div>
+            <div class="row mt-3">
+                <div class="col-md-12 col-xl-6">
+                    <div class="card">
+                        <div class="card-header h3 text-center">
+                            Jefe de carrera
                         </div>
-                        <input id="buscarJefe" type="button" value="Buscar" class="btn ml-2 btn-success">
+                        <div class="card-body d-flex flex-column align-items-center">
+                            <img src="img/perfil.png" alt="foto de perfil no encontrada" class="fotoPerfil rounded-circle img-fluid mt-1">
+                            <div class="form-inline mt-2">
+                                <label class="registroLabel" for="NombreJefe">Nombre</label>
+                                <input type="text" name="NombreJefe" id="NombreJefe" class="form-control ml-2" disabled>
+                            </div>
+                            <div class="form-inline mt-2">
+                                <label class="registroLabel" for="CarreraJefe">Carrera</label>
+                                <input type="text" name="CarreraJefe" id="CarreraJefe" class="form-control ml-2" disabled>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="form-inline d-flex justify-content-around">
+                                <label for="Jefe">Nomina:</label>
+                                <div>
+                                    <input type="text" name="Jefe" id="Jefe" class="form-control ml-2" placeholder="Nomina del jefe">
+                                    <div id="validation-nominaJefe" class="invalid-tooltip">Ingrese este campo</div>
+                                </div>
+                                <input type="button" value="Buscar" id="buscarJefe" class="btn btn-info ml-2">
+                            </div>
+                        </div>
                     </div>
-                    <div id="mostrarJefe"></div>
                 </div>
-            </div>
-
-            <div class="col-12 mt-3">
-                <div class="row">
-                    <div class="col-md-12 col-xl-6 form-inline d-flex align-content-start">
-                        <label class="mr-2 text-white registroLabelCarrera" for="NominaMiembro">Agregar miembro:</label>
-                        <div>
-                            <input type="text" name="NominaMiembro" id="NominaMiembro" class="form-control" placeholder="Nomina">
-                            <div id="validation-nommbre" class="invalid-tooltip">Ingrese este campo</div>
+                <div class="col-md-12 col-xl-6">
+                    <div class="card">
+                        <div class="card-header h3 text-center">
+                            Agregar miembro a la carrera
                         </div>
-                        <input id="buscarMiembro" type="button" value="Buscar" class="btn ml-2 btn-success">
+                        <div class="card-body d-flex flex-column align-items-center">
+                            <img src="img/perfil.png" alt="foto de perfil no encontrada" class="fotoPerfil rounded-circle img-fluid mt-1">
+                            <div class="form-inline mt-2">
+                                <label class="registroLabel" for="NombreMiembro">Nombre</label>
+                                <input type="text" name="NombreMiembro" id="NombreMiembro" class="form-control ml-2" disabled>
+                            </div>
+                            <div class="form-inline mt-2">
+                                <label class="registroLabel" lo for="CarreraMiembro">Carrera</label>
+                                <input type="text" name="CarreraMiembro" id="CarreraMiembro" class="form-control ml-2" disabled>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="form-inline d-flex justify-content-around">
+                                <label for="NominaMiembro">Nomina:</label>
+                                <div>
+                                    <input type="text" name="NominaMiembro" id="NominaMiembro" class="form-control ml-2" placeholder="Nomina">
+                                    <div id="validation-nominaMiembro" class="invalid-tooltip">Ingrese este campo</div>
+                                </div>
+                                <input type="button" value="Buscar" id="buscarMiembro" class="btn btn-info ml-2">
+                                <input type="button" value="Agregar" id="guardarMiembro" class="btn btn-warning ml-2">
+                            </div>
+                        </div>
                     </div>
-                    <div id="mostrarMiembro"></div>
                 </div>
             </div>
 
