rama de documentos

--- a/administrador.html
+++ b/administrador.html
@@ -8,14 +8,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- My Css-->
-    <link rel="stylesheet" href="/css/globales.css">
+    <link rel="stylesheet" href="css/globales.css">
     <title>Academias</title>
 </head>
 
 <body class="bg-secondary">
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#">Academias</a>
+        <a class="navbar-brand" href="administrador.html">Academias</a>
         <div class="w-100 d-flex justify-content-end">
             <form>
                 <button class="btn btn-secondary" type="submit">Cerrar sesion</button>
@@ -36,37 +36,33 @@
         <div class="mt-5"></div>
 
         <div class="row">
-            <div id="crearDocente" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-info text-center text-white clickme">
+            <a href="crearDocente.html" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-info text-center text-white clickme">
                 <h4>Crear docente</h4>
-            </div>
+            </a>
             <div class="col-md-2"></div>
-            <div id="editarDocente" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-info text-center text-white mt-sm-5 mt-md-0 clickme">
+            <a href="buscarDocente.html" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-info text-center text-white mt-sm-5 mt-md-0 clickme">
                 <h4>Editar docente</h4>
-            </div>
+            </a>
         </div>
 
-        <div class="mt-5"></div>
-
-        <div class="row">
-            <div class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-success text-center text-white clickme">
+        <div class="row mt-5">
+            <a href="crearAcademia.html" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-success text-center text-white clickme">
                 <h4>Crear academia</h4>
-            </div>
+            </a>
             <div class="col-md-2"></div>
-            <div id="editarAcademia" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-success text-center text-white mt-sm-5 mt-md-0 clickme">
+            <a href="buscarAcademia.html" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-success text-center text-white mt-sm-5 mt-md-0 clickme">
                 <h4>Editar academia</h4>
-            </div>
+            </a>
         </div>
 
-        <div class="mt-5"></div>
-
-        <div class="row mb-5">
-            <div class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-primary text-center text-white clickme">
+        <div class="row mt-5">
+            <a href="crearCarrera.html" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-primary text-center text-white clickme">
                 <h4>Crear carrera</h4>
-            </div>
+            </a>
             <div class="col-md-2"></div>
-            <div id="editarCarrera" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-primary text-center text-white mt-sm-5 mt-md-0 clickme">
+            <a href="buscarCarrera.html" class="col-sm-12 col-md-5 col-lg-5 col-xl-5 py-3 bg-primary text-center text-white mt-sm-5 mt-md-0 clickme">
                 <h4>Editar carrera</h4>
-            </div>
+            </a>
         </div>
 
     </div>
