--- a/crearAcademia.html
+++ b/crearAcademia.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Academias</title>
     <!-- My Css-->
-    <link rel="stylesheet" href="/css/globales.css">
-    <link rel="stylesheet" href="/css/archivos.css">
+    <link rel="stylesheet" href="css/globales.css">
+    <link rel="stylesheet" href="css/archivos.css">
 </head>
 
 <body class="bg-secondary">
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#">Academias</a>
+        <a class="navbar-brand" href="administrador.html">Academias</a>
         <div class="w-100 d-flex justify-content-end">
             <form>
                 <button class="btn btn-secondary" type="submit">Cerrar sesion</button>
