--- a/PlanTrabajo.html
+++ b/PlanTrabajo.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- My Css-->
+    <link rel="stylesheet" href="css/planTrabajo.css">
     <title>Academias</title>
 </head>
 
@@ -21,7 +23,15 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div class="mt-2 h1 text-white text-center">Crear plan de trabajo</div>
+    </div>
 
+    <div id="documento" class="container">
+        <section id="margen" class="text-white">
+            soy una seccio
+        </section>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
