--- a/panel.html
+++ b/panel.html
@@ -11,6 +11,7 @@
     <script src="https://kit.fontawesome.com/0b3284a19f.js" crossorigin="anonymous"></script>
     <!-- Mi estilo-->
     <link rel="stylesheet" href="css/panel.css">
+    <link rel="stylesheet" href="css/banner.css">
     <title>Academias</title>
 </head>
 
