Vistas de cielo

--- a/Carrera.html
+++ b/Carrera.html
@@ -101,7 +101,7 @@
     <div class="container mb-5 border-bottom border-dark">
         <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
             <label class="btn btn-secondary active opciones text-input">
-                <input type="radio" name="options" id="option1" autocomplete="off"> Presidente
+                <input type="radio" name="options" id="option1" autocomplete="off"> Jefe
             </label>
             <label class="btn btn-secondary opciones text-input">
                 <input type="radio" name="options" id="option3" autocomplete="off"> Agregar miembro
