--- a/acta.html
+++ b/acta.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-3 border border-dark">
                 <img src="img/logo_ITESCA.png" class="img-fluid">
@@ -104,7 +104,7 @@
         </div>
 
         <div class="mt-2 font-weight-bold text-center h2">SEGUIMIENTO DE ACUERDOS ANTERIORES</div>
-        <div class="ml-2 mr-2 mt-3 mb-3">
+        <div class="ml-3 mr-3 mt-3 mb-3">
             <div class="row">
                 <div class="col-3 bg-input text-center h4 font-weight-bold border border-dark">
                     <div class="w-100 h-100 d-flex justify-content-center align-items-center">ACUERDO</div>
@@ -152,7 +152,7 @@
             ACUERDOS DE REUNIÓN
             <input type="button" value="Agregar" class="btn bg-btn-aplicar agregar">
         </div>
-        <div class="ml-2 mr-2 mt-3 mb-3">
+        <div class="ml-3 mr-3 mt-3 mb-3">
             <div class="row">
                 <div class="col-6 bg-input text-center h4 font-weight-bold border border-dark">
                     <div class="w-100 h-100 d-flex justify-content-center align-items-center">ACUERDO</div>
@@ -213,7 +213,7 @@
         <div class="text-input text-justify">
             Nombre y firma de los miembros de la academia que asistieron a la reunión y manifiestan su aprobación para la presente acta.
         </div>
-        <div class="ml-2 mr-2">
+        <div class="ml-3 mr-3">
             <div class="row">
                 <div class="col-4 bg-input text-center h4 font-weight-bold border border-dark">
                     <div class="w-100 h-100 d-flex justify-content-center align-items-center">PROFESOR</div>
@@ -246,8 +246,10 @@
             </div>
         </div>
 
-        <div class="mt-2 font-weight-bold text-center h2 bg-input border border-dark">Revisión y Aprobación del jefe de División</div>
-        <div class="d-flex flex-column border border-dark acuerdo">
+        <div class="mt-2 font-weight-bold text-center h2 bg-input border border-dark">
+            Revisión y Aprobación del jefe de División
+        </div>
+        <div class="d-flex flex-column border border-dark acuerdo mb-5">
             <label class="text-input font-weight-bold">Observaciones:</label>
             <textarea class="mb-5" name="obs" id="obs" rows="10" cols="80"></textarea>
         </div>
@@ -265,6 +267,7 @@
     <script src="//cdn.ckeditor.com/4.17.1/standard/ckeditor.js"></script>
     <!-- My Script -->
     <script src="js/acta.js"></script>
+
 </body>
 
 </html>
