--- a/buscarDocente.html
+++ b/buscarDocente.html
@@ -60,8 +60,8 @@
         </div>
     </div>
 
-    <div class="container mt-3">
-        <div class="form-inline">
+    <div class="container">
+        <div class="form-inline justify-content-center">
             <label class="text-input font-weight-bold ancho justify-content-end">Mostrar</label>
             <select class="form-control ml-2 text-input bg-input" id="mostrar">
                 <option value="">1</option>
@@ -72,11 +72,11 @@
                 <option value="">6</option>
             </select>
         </div>
-        <div class="form-inline mt-2">
+        <div class="form-inline mt-2 justify-content-center">
             <label class="text-input font-weight-bold ancho justify-content-end">Buscar por nombre</label>
             <input type="text" name="" id="" class="form-control bg-input text-input ml-2">
         </div>
-        <div class="form-inline mt-2">
+        <div class="form-inline mt-2 justify-content-center">
             <label class="text-input font-weight-bold ancho justify-content-end">Buscar por nómina</label>
             <input type="text" name="" id="" class="form-control bg-input text-input ml-2">
         </div>
