--- a/acta.html
+++ b/acta.html
@@ -168,22 +168,26 @@
                     <textarea name="acuerdo_1" id="acuerdo_1" rows="10" cols="80"></textarea>
                 </div>
                 <div class="col-4 acuerdo border border-dark">
-                    <div class="form-inline text-input mt-1">
-                        <label for="busqueda_1">Nómina/Nombre</label>
+                    <div class="d-flex mt-1">
+                        <label for="busqueda_1" class="text-input ">Nómina/Nombre</label>
                         <input type="search" name="busqueda_1" id="busqueda_1" class="ml-2 form-control bg-input" list="busqueda_1_lista">
                         <datalist id="busqueda_1_lista">
                             <option value="Camaro">
                         </datalist>
-                        <span class="click ml-2">
+                        <span class="click ml-2 d-flex align-items-center">
                             <i class="fas fa-plus-circle"></i>
                         </span>
                     </div>
                     <div id="agregados" class="text-input">
                         <ul>
                             <li>
-                                <div class="form-inline d-flex">
-                                    <label>Cielo Luz Elena Llamas Servin</label>
-                                    <span class="click ml-auto"><i class="fas fa-user-minus"></i></span>
+                                <div class="row">
+                                    <div class="col-10">
+                                        Cielo Luz Elena Llamas Servin
+                                    </div>
+                                    <div class="col-2">
+                                        <span class="click ml-auto"><i class="fas fa-user-minus"></i></span>
+                                    </div>
                                 </div>
                             </li>
                         </ul>
