--- a/verCarrera.html
+++ b/verCarrera.html
@@ -10,8 +10,10 @@
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/0b3284a19f.js" crossorigin="anonymous"></script>
     <!-- Mi estilo-->
+    <link rel="stylesheet" href="css/panel.css">
     <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/formulario.css">
+    <link rel="stylesheet" href="css/carrera.css">
     <title>Academias</title>
 </head>
 
@@ -51,12 +53,25 @@
                     <li class="breadcrumb-item">
                         <a href="#">Inicio</a>
                     </li>
-                    <li id="accion" class="breadcrumb-item"></li>
+                    <li class="breadcrumb-item">
+                        ver
+                    </li>
                     <li class="breadcrumb-item active">
-                        <label class="text-menu">Docente</label>
+                        <label class="text-menu">Carrera</label>
                     </li>
                 </ol>
             </nav>
+        </div>
+    </div>
+
+    <div class="container">
+        <img id="img-portada" src="img/portada.png" class="portada img-fluid">
+        <div class="arriba ml-3 form-inline">
+            <img src="img/IconLog.png" class="img-fluid foto-opcional">
+            <div class="d-flex flex-column">
+                <label class="text-dark h3 font-weight-bold">Ingeniería en sistemas computacioales</label>
+                <label class="h5">M.C Cesar Leonel Zazueta Villavicencio</label>
+            </div>
         </div>
     </div>
 
@@ -99,7 +114,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- My Script -->
-    <script src="js/buscarDocente.js"></script>
+    <script src="js/verCarrera.js"></script>
+
 </body>
 
 </html>
