--- a/panel.html
+++ b/panel.html
@@ -12,6 +12,7 @@
     <!-- Mi estilo-->
     <link rel="stylesheet" href="css/panel.css">
     <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/formulario.css">
     <title>Academias</title>
 </head>
 
@@ -83,7 +84,32 @@
     </div>
 
     <div class="container mt-5">
-        <div class="row ">
+        <div class="row">
+
+            <div class="col-12 mb-3">
+                <div class="text-center">
+                    <label class="filtro">Filtro</label>
+                </div>
+                <div class="d-flex d-inline justify-content-center">
+                    <div class="form-inline mr-2">
+                        <label>Ver desde</label>
+                        <input type="datetime-local" class="form-control bg-input ml-2">
+                    </div>
+                    <div class="form-inline">
+                        <label>Hasta</label>
+                        <input type="datetime-local" class="form-control bg-input ml-2">
+                    </div>
+                </div>
+                <div class="form-check mt-1 text-center">
+                    <input class="form-check-input bg-input" type="checkbox" id="defaultCheck1">
+                    <label class="form-check-label" for="defaultCheck1">
+                        Ver juntas pasadas
+                    </label>
+                </div>
+                <div class="text-center mt-2">
+                    <input type="button" value="Aplicar" class="btn bg-btn-aplicar">
+                </div>
+            </div>
 
             <div class="col-4">
 
@@ -168,21 +194,15 @@
             </div>
 
             <div class="col-4 border-left border-dark d-flex flex-column">
-                <div class="text-center">
-                    <label class="filtro">Filtro</label>
-                </div>
-                <label>Ver desde</label>
-                <input type="datetime-local" class="form-control bg-input">
-                <label>Hasta</label>
-                <input type="datetime-local" class="form-control bg-input">
-                <div class="form-check mt-1 text-center">
-                    <input class="form-check-input bg-input" type="checkbox" id="defaultCheck1">
-                    <label class="form-check-label" for="defaultCheck1">
-                        Ver juntas pasadas
-                    </label>
-                </div>
-                <div class="text-center mt-2">
-                    <input type="button" value="Aplicar" class="btn bg-btn-aplicar">
+                <div class="align-self-center h1">Coordinador</div>
+                <div class="d-flex flex-column align-items-center">
+                    <img src="img/IconLog.png" class="img-fluid foto-opcional">
+                    <label class="text-input">Nomina</label>
+                    <label>Nombre</label>
+                    <label>Correo</label>
+                    <div class="d-flex d-inline justify-content-center mb-3">
+                        <img src="img/ver-detalles.png" class="opciones img-fluid click ml-2" title="ver">
+                    </div>
                 </div>
             </div>
 
