Buscar Academias para el plan de trabajo

--- a/panel.html
+++ b/panel.html
@@ -50,6 +50,8 @@
         </div>
     </div>
 
+    <div id="errorG"></div>
+
     <div class="bg-menu-principal">
         <div class="d-flex justify-content-around container">
 
