--- a/buscarAcademia.html
+++ b/buscarAcademia.html
@@ -35,7 +35,7 @@
                 </label>
             </div>
             <div class="d-flex justify-content-end w-75">
-                <label class="click iconos-superior ml-3">
+                <label class="click iconos-superior ml-3" id="Cerrar">
                     <span>
                         <i class="fas fa-sign-out-alt"></i>
                     </span>
@@ -48,14 +48,8 @@
     <div class="bg-menu-principal">
         <div class="container">
             <nav aria-label="breadcrumb">
-                <ol class="breadcrumb sin d-flex align-items-center">
-                    <li class="breadcrumb-item">
-                        <a href="#">Inicio</a>
-                    </li>
-                    <li id="accion" class="breadcrumb-item"></li>
-                    <li class="breadcrumb-item active">
-                        <label class="text-menu">Academia</label>
-                    </li>
+                <ol class="breadcrumb sin d-flex align-items-center" id="pan">
+
                 </ol>
             </nav>
         </div>
@@ -93,14 +87,15 @@
         <div id="pie"></div>
     </div>
 
-    <!--Ajax-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <div id="modales"></div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- My Script -->
+    <script src="js/validaciones.js"></script>
     <script src="js/buscarAcademia.js"></script>
 </body>
 
