Plan de trabajo, fechas y vista previa

--- a/planTrabajo.html
+++ b/planTrabajo.html
@@ -55,7 +55,8 @@
 
     <div class="container">
 
-        <div class="mb-3 d-flex justify-content-center">
+        <div class="mb-3 d-flex justify-content-around">
+            <input name="preview" type="button" value="Vista Previa" class="btn btn-secondary btn-lg">
             <input name="Crear" type="button" value="Generar PDF" class="btn btn-success btn-lg">
         </div>
 
@@ -367,7 +368,8 @@
             </div>
         </div>
 
-        <div class="mb-3 d-flex justify-content-center">
+        <div class="mb-3 d-flex justify-content-around">
+            <input name="preview" type="button" value="Vista Previa" class="btn btn-secondary btn-lg">
             <input name="Crear" type="button" value="Generar PDF" class="btn btn-success btn-lg">
         </div>
 
