--- a/buscarAcademia.html
+++ b/buscarAcademia.html
@@ -21,7 +21,7 @@
     <div class="bg-panel-superior">
         <div class="container d-flex">
             <div class="w-25">
-                <label class="click iconos-superior">
+                <label class="click iconos-superior" id="inicio">
                     <span>
                         <i class="fas fa-home"></i>
                     </span>
@@ -49,7 +49,6 @@
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb sin d-flex align-items-center" id="pan">
-
                 </ol>
             </nav>
         </div>
