--- a/Docente.html
+++ b/Docente.html
@@ -67,6 +67,9 @@
 
     <div class="container mt-2">
         <div class="row">
+            <div class="col-12 d-flex justify-content-center" id="soloEdit">
+
+            </div>
             <div class="col-3">
                 <div class="d-flex">
                     <img id="perfil" src="img/IconLog.png" class="img-fluid">
@@ -111,7 +114,7 @@
                             <div class="input-group-append">
                                 <div class="input-group-text sin">
                                     <select class="custom-select text-input font-weight-bold" id="extension">
-                                        <option value="@itesca.edu.mx" selected>@itesca.edu.mx</option>
+                                        <option value="@itesca.edu.mx">@itesca.edu.mx</option>
                                         <option value="@cajeme.tecnm.mx">@cajeme.tecnm.mx</option>
                                     </select>
                                 </div>
@@ -129,9 +132,14 @@
 
             </div>
         </div>
-        <div class="d-flex justify-content-around">
-            <input value="Cancelar" type="button" class="btn bg-btn-aplicar">
+        <div class="d-flex justify-content-around mb-5" id="Creacion">
+            <input name="cancelar" value="Cancelar" type="button" class="btn bg-btn-aplicar">
             <input id="registrar" type="button" value="Registrar" class="btn btn-primary-r">
+        </div>
+        <div class="d-flex justify-content-around mb-5" id="Edicion">
+            <input name="cancelar" value="Cancelar" type="button" class="btn bg-btn-aplicar btn-primary-r">
+            <input id="aplicarBaja" value="Inhabilitar" type="button" class="btn btn-primary-r bg-danger">
+            <input id="editar" type="button" value="Editar" class="btn btn-primary-r">
         </div>
     </div>
 
