--- a/buscarDocente.html
+++ b/buscarDocente.html
@@ -20,7 +20,7 @@
     <div class="bg-panel-superior">
         <div class="container d-flex">
             <div class="w-25">
-                <label class="click iconos-superior">
+                <label class="click iconos-superior" id="inicio">
                     <span>
                         <i class="fas fa-home"></i>
                     </span>
@@ -49,7 +49,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb sin d-flex align-items-center">
                     <li class="breadcrumb-item">
-                        <a href="#">Inicio</a>
+                        <a href="/Academias/panel.html">Inicio</a>
                     </li>
                     <li id="accion" class="breadcrumb-item"></li>
                     <li class="breadcrumb-item active">
@@ -64,21 +64,17 @@
         <div class="form-inline justify-content-center">
             <label class="text-input font-weight-bold ancho justify-content-end">Mostrar</label>
             <select class="form-control ml-2 text-input bg-input" id="mostrar">
-                <option value="">1</option>
-                <option value="">2</option>
-                <option value="" selected>3</option>
-                <option value="">4</option>
-                <option value="">5</option>
-                <option value="">6</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3" selected>3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
             </select>
         </div>
         <div class="form-inline mt-2 justify-content-center">
-            <label class="text-input font-weight-bold ancho justify-content-end">Buscar por nombre</label>
-            <input type="text" name="" id="" class="form-control bg-input text-input ml-2">
-        </div>
-        <div class="form-inline mt-2 justify-content-center">
-            <label class="text-input font-weight-bold ancho justify-content-end">Buscar por nómina</label>
-            <input type="text" name="" id="" class="form-control bg-input text-input ml-2">
+            <label class="text-input font-weight-bold justify-content-end">Buscar por nombre/nómina</label>
+            <input type="text" class="form-control bg-input text-input ml-2">
         </div>
         <div class="d-flex justify-content-center mt-2">
             <input type="button" value="Aplicar" class="btn bg-input text-input font-weight-bold rounded rounded-pill">
